--- a/free-nodes/2025-10-13-node-share.htm
+++ b/free-nodes/2025-10-13-node-share.htm
@@ -171,16 +171,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-free-vpn.htm" title="VPN设备 | 10月11日18M/S|免费VPN/SSR节点/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月11日18M/S|免费VPN/SSR节点/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-node-share.htm" title="VPN设备 | 10月13日18.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点免费节点订阅分享">VPN设备 | 10月13日18.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-node-share-links.htm" title="VPN设备 | 9月14日20.5M/S|免费VPN/Clash节点/SSR/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月14日20.5M/S|免费VPN/Clash节点/SSR/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享">VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-vpn-proxy.htm" title="VPN设备 | 10月15日21.5M/S|免费VPN/SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月15日21.5M/S|免费VPN/SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" title="VPN设备 | 9月30日20.1M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 9月30日20.1M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-node-subscribe.htm" title="VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享">VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-8-vpn-node.htm" title="VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-3-top-vpn-node.htm" title="VPN设备 | 10月3日20.2M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 10月3日20.2M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share.htm" title="VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-vpn-github.htm" title="VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享">VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-vpn-node.htm" title="VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-mianfei-vpn.htm" title="VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-node-share-links.htm" title="VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-top-vpn.htm" title="VPN设备 | 9月25日22.7M/S|免费VPN/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 9月25日22.7M/S|免费VPN/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-vpn-proxy.htm" title="VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-13-node-share.htm" title="VPN设备 | 10月13日18.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点免费节点订阅分享">VPN设备 | 10月13日18.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -192,7 +192,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
